--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/AmazinglyNormal/react-nodejs-practice-app#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "config": "^3.3.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
