--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AmazinglyNormal/react-nodejs-practice-app#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.10.3"
